Fix misaligned tooltip in canvas.css
Due to the hasty split of css, there might still be some more bugs like this one.

--- a/src/styles/canvas.css
+++ b/src/styles/canvas.css
@@ -71,7 +71,7 @@
   border: 2px solid white;
 }
 
-.Canvas-controls [role="button"]::after {
+.Canvas .Canvas-controls [role="button"]::after {
   top: -3px;
   left: -104px;
   width: 100%;
